{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "8b46f848-fb19-46db-960b-b500940b73db",
            "actions": [
                {
                    "name": "Aiming",
                    "type": "Value",
                    "id": "a8034e19-92df-443d-8f04-06da252b6cfd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Moving",
                    "type": "Value",
                    "id": "2d0d13fb-f922-4ef3-accb-ebbf1c8c52d3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Auto",
                    "type": "Button",
                    "id": "ff677527-0b0f-4dec-a35c-05a07449b255",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ab1",
                    "type": "Button",
                    "id": "136103a4-b03b-4f05-9472-3df10b96fcad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ab2",
                    "type": "Button",
                    "id": "34b5e90d-3a01-4beb-9a43-cdfefb43edb2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ab3",
                    "type": "Button",
                    "id": "7bc1177d-7d6b-4bad-a48c-a3f0296c93fd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "fb1x",
                    "type": "Button",
                    "id": "6254a14d-5862-4cf2-9f1a-426bc95cbec9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "fb2sq",
                    "type": "Button",
                    "id": "6439bc95-363c-4044-92c5-f5c9166f6131",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "fb3ci",
                    "type": "Button",
                    "id": "cc16c937-2410-4dec-9d8a-ffbcc216d355",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "fb4tr",
                    "type": "Button",
                    "id": "65acd05b-b4e7-48f5-969a-955501dac6be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPup",
                    "type": "Button",
                    "id": "afc065a3-d5a4-4237-8288-1f48d1e140b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPleft",
                    "type": "Button",
                    "id": "3e38ec66-da45-4c23-a441-cf38a2e85d87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPright",
                    "type": "Button",
                    "id": "5d1ffda1-a4e2-415f-af0e-729a99419ad1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPdown",
                    "type": "Button",
                    "id": "b91a4c1f-792f-4d70-bc4b-30feb54c3e4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "04f47748-a12b-465e-a6b2-25994356e884",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "83e1aebd-3096-4eb7-a39e-f358e07ceda6",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Aiming",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3a888ed-4a6b-456a-834b-912db58043ce",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c95fecf7-a907-483b-a3aa-9dac474c8b66",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Auto",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cbd4289f-fa75-41de-9890-e0da501fb0f7",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ab1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84414334-cd03-4e4a-ba2d-eaaacdafa63d",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ab2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ab5be41-bf47-4369-ad0a-b5b2121ac906",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ab3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c4e9359-1a0a-45aa-bd6e-758602445962",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fb1x",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f897211d-462f-43bb-bb90-fc17265e71fd",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fb2sq",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98e5b3d0-82c1-4312-a640-5114efc8ea2e",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fb3ci",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df36b27d-5a4a-43f8-8721-162687acf7e1",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fb4tr",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "081b3cb8-5bb9-497b-8ed7-dace468db670",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2236161c-f089-42fe-a271-f45912369ce7",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPleft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d802c068-575b-412c-a1d3-d2d950bc09ed",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPright",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b4f3215-702f-4393-9586-941319350bd3",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPdown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f981ab76-cc1b-4232-80d9-db5bf9ff9cf1",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}